Fix up spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ h3 {
   margin-bottom: 20px; }
 
 #commitment-level {
-  margin-top: 35px; }
+  margin-top: 20px; }
 
 #ages {
   position: relative; }
@@ -118,7 +118,7 @@ h3 {
     line-height: 49px; }
 
 #age-range {
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 40px; }
   #age-range #range-slider {
     max-width: 375px;
