--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -66,7 +66,7 @@ h3 {
 }
 
 #commitment-level {
-	margin-top:35px;
+	margin-top:20px;
 }
 
 #ages {
@@ -87,7 +87,7 @@ h3 {
 	}
 }
 #age-range {
-	margin-top:40px;
+	margin-top:20px;
 	margin-bottom:40px;
 
 	#range-slider {
